# jusbr

./: .pdbrc  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg
api/: constants.py  logger.py  main.py  schema.py  utils.py
api/tests/: test_api.py  test_utils.py
crawlers/: items.py  loaders.py  middlewares.py  pipelines.py  processors.py  runner.py  settings.py  utils.py
crawlers/spiders/: __init__.py  tjal.py  tjce.py
crawlers/spiders/esaj/: constants.py  esaj.py
crawlers/spiders/tjal/: arguments.yml  tjal.py
crawlers/spiders/tjce/: arguments.yml  tjce.py
crawlers/tests/: test_spiders.py  test_utils.py
